# HamClock

./: .gitignore  BUG_REPORT_DISPLAY.md  BUILD.md  CMakeLists.txt  COMPETITIVE-ANALYSIS.md  CONTRIBUTING.md  CROSS_COMPILE.md  GETTING_STARTED.md  GITHUB-WIKI-GUIDE.md  ISSUES-AND-FEATURES.md  LICENSE  Makefile  PHASE-10-11-IMPLEMENTATION-PLAN.md  PHASE-12-VISUAL-RENDERING-PLAN.md  PHASE1-TEST-RESULTS.md  PHASE1_SUMMARY.md  PHASE2-TEST-RESULTS.md  PHASE2_SUMMARY.md  PHASE3-TEST-RESULTS.md  PHASE3_SUMMARY.md  PHASE4-TEST-RESULTS.md  PHASE4_SUMMARY.md  PHASE5-TEST-RESULTS.md  PHASE5_SUMMARY.md  PHASE6-TEST-RESULTS.md  PHASE6_SUMMARY.md  PHASE7_COMPLETE.md  PHASE7_OPTIMIZATION.md  PHASE8-COMPLETION-STATUS.md  PHASE8-COMPLETION-SUMMARY.txt  PHASE8-DEPLOYMENT-GUIDE.md  PHASE8-FEATURES-COMPARISON.md  PHASE8-FINAL-VALIDATION.md  PHASE8-FULL-FEATURE-IMPLEMENTATION.md  PHASE8-QUICK-REFERENCE.md  PHASE8-README.md  PHASE8-SESSION-SUMMARY.md  PHASE8-TESTING-SUITE.md  PHASE8-UNIT-TESTS.md  PHASE8-VERIFICATION-CHECKLIST.md  (+12 more)
ArduinoLib/: GPIO.cpp  GPIO.h
build-tests/: CTestTestfile.cmake  hamclock
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/tests/: CTestTestfile.cmake  test_maidenhead  test_sun  test_timezone
docs/: Home.md  Phase-8-Alert-System.md  README.md  _Footer.md
docs/wiki/: Building-HamClock.md  Debian-Trixie-Compatibility.md  GPIO-Optimization.md  Home.md  Language-Comparison-C-vs-Rust.md  README.md  Rust-Architecture.md  Rust-Building-Guide.md  Rust-Performance-Plan.md  Rust-Rewrite-Overview.md  Why-Rust-Over-C.md
rust-src/: .gitignore  Cargo.toml
rust-src/src/: config.rs  error.rs  lib.rs  main.rs  startup.rs
rust-src/src/audio/: alerts.rs  mod.rs
rust-src/src/data/: alerts.rs  cache.rs  fetcher.rs  forecast.rs  mod.rs  models.rs
rust-src/src/phase9/: history.rs  mod.rs  mqtt.rs  notifications.rs  web_dashboard.rs
rust-src/src/phase9/web/: index.html
rust-src/src/render/: aurora.rs  gpu.rs  grid.rs  heatmap.rs  layers.rs  mod.rs  shapes.rs  text.rs
rust-src/src/render/shaders/: text.wgsl
rust-src/src/ui/: mod.rs  views.rs  window.rs
scripts/: build.sh  test.sh
src/: main.c
src/api/: api_manager.c  api_manager.h  http_client.c  http_client.h  noaa.c  noaa.h
src/astro/: moon.c  moon.h  sun.c  sun.h
src/core/: config.c  config.h  log.c  log.h  state.c  state.h  timing.c  timing.h
src/data/: cache.c  cache.h  database.c  database.h
src/display/: clocks.c  clocks.h  earthmap.c  earthmap.c.backup  earthmap.h  renderer.c  renderer.h
src/utils/: json_simple.c  json_simple.h  maidenhead.c  maidenhead.h  string_utils.c  string_utils.h  timezone.c  timezone.h
tests/: CMakeLists.txt  test_maidenhead.c  test_sun.c  test_timezone.c
wiki/: Feature-Overview.md  Phase-9-Alert-Extensions.md  Why-Rust-Over-C.md
